# Monogatari_Ast

./: .gitignore  Examples.md  FileFormat.md  ForModuleDeveloper.md  Makefile  ModuleTemplate.h  MonogatariAshisutando  MonogatariAshisutando.pro  MonogatariAshisutando.pro.user.ed55f10  README.md  REFACTORING_SUMMARY.md  icons.qrc  mainwindow.cpp  mainwindow.h  mainwindow.ui  moc_mainwindow.cpp  qrc_icons.cpp  test_refactoring.sh  ui_mainwindow.h
ModuleCode/BaseInfo/: BaseInfo.cpp  BaseInfo.h  BaseInfo.ui  BaseInfo.ui.bak  BaseInfo_global.h  CMakeLists.txt  ModuleTemplate.h  res.qrc  stopwords.json
TestModule/: Makefile.Debug  Makefile.Release  TestModule.cpp  TestModule.h  TestModule.pro
